--- a/cssfonts/fontstyles.css
+++ b/cssfonts/fontstyles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype-variations');
+    src: url('../fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-style: normal;
     font-optical-sizing: auto;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype-variations');
+    src: url('../fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-style: italic;
     font-optical-sizing: auto;
@@ -18,5 +18,8 @@
     font-family: 'Inter', sans-serif;
     font-weight: 400; /* Cambia il peso come preferisci */
     font-style: normal; /* Usa 'italic' per corsivo */
-    font-size: 20px;
+    font-size: 100pt;
+    color: black;
+    text-transform: uppercase;
+    margin: 20px;
 }
