--- a/styles.css
+++ b/styles.css
@@ -12,18 +12,18 @@
     font-style: italic;
 }
 
-/* Stili per la barra dei social media in basso */
 .social-icons {
     position: fixed;
-    bottom: 10px;
+    bottom: 5px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
-    gap: 10px; /* Distanza tra le icone */
-    z-index: 3; /* Assicura che sia sopra altri contenuti */
+    gap: 3px; /* Distanza minima tra le icone */
+    z-index: 100; /* Assicura che sia sopra tutti gli altri contenuti */
 }
 
 .social-icons img {
-    width: 12pt;
-    height: 12pt;
+    width: 3px;
+    height: 3px;
 }
+
