--- a/cssfonts/fontstyles.css
+++ b/cssfonts/fontstyles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
+    src: url('/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-style: normal;
     font-optical-sizing: auto;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
+    src: url('/fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-style: italic;
     font-optical-sizing: auto;
@@ -16,10 +16,28 @@
 
 .fromaeffimera-text {
     font-family: 'Inter', sans-serif;
-    font-weight: 400; /* Cambia il peso come preferisci */
-    font-style: normal; /* Usa 'italic' per corsivo */
+    font-weight: 400;
+    font-style: normal;
     font-size: 100pt;
     color: black;
     text-transform: uppercase;
     margin: 20px;
+    line-height: 1.2;
+    font-optical-sizing: auto;
+    transition: font-weight 0.3s ease, font-style 0.3s ease;
+}
+
+/* Tablet */
+@media (max-width: 1024px) {
+    .fromaeffimera-text {
+        font-size: 70pt;
+    }
+}
+
+/* Smartphone */
+@media (max-width: 768px) {
+    .fromaeffimera-text {
+        font-size: 50pt;
+        margin: 10px;
+    }
 }
